# WiYO

./: .coverage  .gitignore  .replit  Pasted-ERROR-app-Exception-on-login-GET-Traceback-most-recent-call-last-File-home-runner-worksp-1729753251994.txt  Pasted-Make-an-anonymous-polling-application-Let-humans-login-anonymously-create-a-random-8-digit-code--1729339872004.txt  README.md  add_sample_polls.py  app.py  check_git_config.py  check_openai_api.py  check_repo.py  create_and_push_repo.py  create_tables.py  debug_database.py  debug_user.py  display_schema.py  init_and_push.py  main.py  models.py  push_to_github.py  pyproject.toml  pytest.ini  routes.py  setup_git.py  test.py  utils.py  verify_database.py  verify_github_access.py  verify_openai_api.py
migrations/versions/: 3f5a086194b5_add_comment_model.py  3fdf00fb7aed_add_responded_field_to_response_model.py  966ee5623d5b_add_forum_post_model.py  d0c1e6d9237c_add_description_to_forumpost.py
static/css/: custom.css
static/js/: charts.js  main.js
templates/: account_created.html  base.html  chat.html  create_forum.html  create_post.html  create_wiyo_account.html  dashboard.html  demographics.html  demographics_fields.html  forum.html  forum_details.html  login.html  polls.html  post.html  results.html
tests/: conftest.py  create_test_db.py  test_auth.py  test_chat.py  test_demographics.py  test_forum.py  test_polls.py
