[project]
name = "repl-nix-anonymouspollmaker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-migrate>=4.0.7",
    "openai>=1.52.0",
    "sqlalchemy>=2.0.36",
    "jinja2",
    "werkzeug",
    "python-dotenv",
    "flask-login",
    "requests>=2.32.3",
    "pytest>=8.3.3",
    "pytest-flask>=1.3.0",
    "pytest-cov>=5.0.0",
]
